--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "aws-cdk": "2.53.0",
     "aws-sdk": "^2.1264.0",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
@@ -29,7 +35,6 @@
     "aws-cdk-lib": "2.53.0",
     "aws-xray-sdk": "^3.4.1",
     "constructs": "^10.0.0",
-    "eslint": "^8.10.0",
     "source-map-support": "^0.5.21"
   }
 }
