--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,12 +1,10 @@
 on:
-  # Trigger analysis when pushing in master or pull requests, and when creating
-  # a pull request.
   push:
     branches:
       - master
   pull_request:
       types: [opened, synchronize, reopened]
-name: Main Workflow
+name: Sonar
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
