--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
       ],
       "/opt/nodejs/orderEventsLayer": [
         "lambda/orders/layers/orderEventsLayer/nodejs/orderEvent"
+      ],
+      "/opt/nodejs/orderEventsRepositoryLayer": [
+        "lambda/orders/layers/orderEventsRepositoryLayer/nodejs/orderEventRepository"
       ]
     }
   },
